# todo

./: .gitignore  README.md  index.html  package.json  tailwind.config.js
.github/workflows/: ci.yml
splash/: index.html  style.css
src/: App.tsx  Store.ts  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/dialogue/: icons.tsx  index.tsx
src/components/footer/: index.tsx
src/components/hero/: Empty.tsx  Stats.tsx  index.tsx
src/components/navbar/: icons.tsx  index.tsx
src/components/todo/: icons.tsx  index.tsx
src/functions/: Config.ts  Todo.ts
src/functions/utils/: createDataFolder.ts  createSaveFile.ts  readData.ts  writeData.ts
src/reducers/: filter.ts  inactive.ts  theme.ts  todo.ts  total.ts
src/types/: StoreType.ts  TodoTypeRaw.ts
