[package]
name = "app"
version = "1.0.0"
description = "A Todo Manager"
authors = ["codeaye"]
license = "MIT"
repository = "https://github.com/codeaye/todo"
default-run = "app"
edition = "2021"
rust-version = "1.57"

[build-dependencies]
tauri-build = { version = "1.0.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.0", features = ["fs-all", "path-all"] }

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
